# mini-notes-api

./: .env  .env.example  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/config/: db_config.py  di.py
backend/controllers/: note_controller.py  webhook_controller.py
backend/models/: notes.py  webhooks.py
backend/repositories/: note_repository.py  webhook_repository.py
backend/tests/: note_test.py  webhook_test.py
